VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/Asset_and_Liability__c.object-meta.xml
<CustomObject>
    <label>Asset and Liability</label>
    <nameField>
        <displayFormat>AL-{0000000}</displayFormat>
        <label>Asset and Liability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset and Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>