VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset and Liabilities</relationshipLabel>
    <relationshipName>Asset_and_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>