VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Balance_Owing__c.field-meta.xml
<CustomField>
    <fullName>Balance_Owing__c</fullName>
    <label>Balance Owing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>