VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Bank_Cash__c.field-meta.xml
<CustomField>
    <fullName>Bank_Cash__c</fullName>
    <label>Bank/Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>