VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Credit_Cards__c</fullName>
    <label>Credit Cards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>