VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Finance_Co__c.field-meta.xml
<CustomField>
    <fullName>Finance_Co__c</fullName>
    <label>Finance Co</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>