VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Furniture__c.field-meta.xml
<CustomField>
    <fullName>Furniture__c</fullName>
    <label>Furniture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>