VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Land_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Land_Buildings__c</fullName>
    <label>Land/Buildings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>