VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Mortgages__c.field-meta.xml
<CustomField>
    <fullName>Mortgages__c</fullName>
    <label>Mortgages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>