VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Motor_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Motor_Vehicles__c</fullName>
    <label>Motor Vehicles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>