VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Asset and Liabilities</relationshipLabel>
    <relationshipName>Asset_and_Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>