VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Other_Loans__c.field-meta.xml
<CustomField>
    <fullName>Other_Loans__c</fullName>
    <label>Other Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>