VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Overdraft__c.field-meta.xml
<CustomField>
    <fullName>Overdraft__c</fullName>
    <label>Overdraft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>