VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Owner_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Occupied</label>
    <type>Checkbox</type>
</CustomField>