VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/SuperAnnutation__c.field-meta.xml
<CustomField>
    <fullName>SuperAnnutation__c</fullName>
    <label>SuperAnnuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>