VendorCalc/force-app/main/default/objects/Asset_and_Liability__c/fields/Total_Surplus__c.field-meta.xml
<CustomField>
    <fullName>Total_Surplus__c</fullName>
    <label>Total Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>